Iniciando com js

--- a/pseudo.css
+++ b/pseudo.css
@@ -1,23 +1,32 @@
 
-.linkItem1:hover {
-    border-bottom: solid 5px yellow;  
-    color: yellow;
-    transition: 0.3s;
-}
 
+.linkItem1:hover {
+    border-bottom: solid 5px var(--cor3);  
+    color: var(--cor3);
+    transition: 0.3s;
+    
+}
 #seguir:hover {
-    border: 4px double whitesmoke;
-    background-color: black;
-    color: whitesmoke;
+    border: 4px double var(--cinzaClaro);
+    background-color: var(--cinzaEscuro);
+    color: var(--cinzaClaro);
     cursor: pointer;
     transition: 0.3s;
 }
-
 #profile:hover {
     cursor: pointer;
-    color: whitesmoke;
     transition: 0.3s;
 }
 .buttonProfile:hover {
     cursor: pointer;
 }
+.buttonItem2:hover {
+    background-color: var(--cor3);
+    transition: 0.3s;
+}
+.divItem4:hover {
+    border-color: var(--cor3);
+    transition: 0.3s;
+}
+
+
