Desenvolvendo funcionalidades dos botoes

--- a/css/color.css
+++ b/css/color.css
@@ -4,10 +4,10 @@
 
     /*Cores*/
 
-    --cor1: #fb00ff;
-    --cor2: #5E17EB;
+    --cor1: #536994;
+    --cor2: #33425fe8;
     --cor3: #d0ff00;
-    --cor4: #ad92e4;
-    color: #2c2c2c;
+    --cor4: #33425fe8;
+      color: #2c2c2c;
 
 }
