--- a/css/pseudo.css
+++ b/css/pseudo.css
@@ -25,8 +25,28 @@
     transition: 0.3s;
 }
 .divItem4:hover {
-    border-color: var(--cor3);
+    border-color: var(--cor3) ;
+    border-style: double;
     transition: 0.3s;
 }
+.linkItem4:hover{
+    border: 5px double var(--cinzaEscuro);
+    background-color: var(--cor3);
+    color: var(--cinzaClaro);
+    cursor: pointer;
+    transition: 0.3s;
+}
+.trMain:hover{
+    background-color: var(--cor3);
+    color: var(--cinzaEscuro);
+    cursor:default;
+}
+
+.pTitulo:hover,
+.pAlbum:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
 
 
